tests/ui/issues/issue-20261.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-20261.rs:4:11
   |
LL |         i.clone();
   |           ^^^^^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
